Fix nav-header text on mobile, add placeholder `LI` square
-- Add @media statement to contain nav header when on mobile
-- Add commented-out footer images, need to incorporate row

--- a/css/main.css
+++ b/css/main.css
@@ -218,4 +218,14 @@ p {
       /* display: block; */
     }
   }
+
+  nav .brand-logo {
+    font-size: 1.8rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  nav .brand-logo {
+    font-size: 1.8rem;
+  }
 }
